[package]
name = "inky-ssd1608"
version = "0.1.2"
authors = ["Glenn Trigg <ggtrigg@gmail.com>"]
edition = "2021"

categories = ["embedded"]

[dependencies]
i2cdev = "0.5.1"
linux-embedded-hal = "0.4.0"
embedded-hal = "1.0.0"
embedded-graphics = "0.7.1"
spi-memory = "0.2.0"
profont = "0.5.0"
thiserror = "1.0.63"

[dependencies.nix]
optional = true
version = "0.20.0"

